[package]
name = "kzg_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = {git = "https://github.com/supranational/blst"}
hex = "0.4.3"
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0.103"

[dev-dependencies]
glob = "0.3.1"
serde_yaml = "0.9.25"
