[package]
name = "kzg_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = { version = "0.3.11" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"

[dev-dependencies]
glob = "0.3.1"
serde_yaml = "0.9.25"
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "kzg_benches"
harness = false
